--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -19,7 +19,7 @@
 
 |Oracle|PPAS|PPAS底层存储类型|
 |:-:|-|-|
-|NUMBER [ (p [, s]) ]|NUMBER [ (p [, s]) ]|仅仅支持p>=s情况|
+|NUMBER [ (p [, s]) ]|NUMBER [ (p [, s]) ]|仅仅支持p>=s情况，且p只能是正数，s只能是正数或者0|
 |FLOAT|FLOAT|DOUBLE PRECISION|
 |FLOAT(p)]|FLOAT(p)|FLOAT(1) ~ FLOAT(24)：等价于REAL；FLOAT(25) ~ FLOAT(53)：等价于DOUBLE PRECISION|
 |BINARY_FLOAT|REAL|N/A|
