--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -11,8 +11,10 @@
 |Oracle|PPAS|PPAS底层存储类型|
 |:-:|-|-|
 |CHAR [(size [BYTE \| CHAR])]|CHAR [(size)]|PPAS不支持BYTE存储|
+|VARCHAR(size [BYTE \| CHAR])|VARCHAR(size)|PPAS不支持BYTE存储|
 |VARCHAR2(size [BYTE \| CHAR])|VARCHAR2(size)|PPAS不支持BYTE存储|
 |NCHAR[(size)]|CHAR[(size)]|N/A|
+|NVARCHAR(size)|VARCHAR(size)|N/A|
 |NVARCHAR2(size)|VARCHAR2(size)|N/A|
 
 **2. 数值类型**
