--- a/ppas/20181119/20181119_01.md
+++ b/ppas/20181119/20181119_01.md
@@ -80,5 +80,11 @@
 |BOOLEAN|BOOLEAN|N/A|
 
 **8. Oracle特有数据类型**
+|Oracle|PPAS|PPAS底层存储类型|
+|:-:|-|-|
+|UDT|UDT|自定义TYPE|
+|SYS.ANYDATA|不支持|依据具体场景进行替换|
+|XMLTYPE|XMLTYPE|XML|
+|SDO_Geometry|Geometric Types|N/A|
 
 
