--- a/ppas/20181120/20181120_01.md
+++ b/ppas/20181120/20181120_01.md
@@ -3,3 +3,41 @@
 
 ### 一、背景介绍
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;虚拟列
+
+### 二、转换规则
+
+1. Oracle源库
+```
+-- 案例1：
+CREATE TABLE "ADAM"."TAB_VIRTUAL_COLUMN"
+   (    "EMP_ID" NUMBER,
+        "ENAME" VARCHAR2(20),
+        "JOB" VARCHAR2(20),
+        "SALARY" NUMBER,
+        "BONUS" NUMBER,
+        "TCOMP" NUMBER GENERATED ALWAYS AS ("SALARY" + "BONUS") VIRTUAL VISIBLE
+   );
+```
+
+2. PPAS目标库
+```
+-- 案例1：转换案例如下：
+-- 1.建表语句
+CREATE TABLE tab_vc
+  (
+ emp_id     number  not null,
+ ename      varchar2(20),
+ job	    varchar2(20),
+ salary     number,
+ bonus      number,
+ tcomp      number -- 这个部分对应的用触发器实现
+);
+
+-- 2. 触发器
+CREATE OR REPLACE TRIGGER trig_tab_vc
+ BEFORE INSERT OR UPDATE ON tab_vc
+ FOR EACH ROW
+BEGIN
+  NEW.tcomp = NEW.salary + NEW.bonus;
+END;
+```
