--- a/ppas/20181120/20181120_01.md
+++ b/ppas/20181120/20181120_01.md
@@ -1,8 +1,8 @@
-## Oracle PPAS 兼容性分析 之 虚拟列
+## Oracle PPAS 兼容性分析 之 虚拟列（Virtual columns）
 ---
 
 ### 一、背景介绍
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;虚拟列
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;虚拟列（Virtual columns）不存储在数据库中，是在执行查询时由oracle后台计算出来返回给用户，因此虚拟列不会增加存储空间，但是由于需要计算，需要消耗额外的CPU Time。
 
 ### 二、转换规则
 
