--- a/ppas/20181120/20181120_01.md
+++ b/ppas/20181120/20181120_01.md
@@ -4,6 +4,22 @@
 ### 一、背景介绍
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;虚拟列（Virtual columns）不存储在数据库中，是在执行查询时由oracle后台计算出来返回给用户，因此虚拟列不会增加存储空间，但是由于需要计算，需要消耗额外的CPU Time。
 
+**基本语法格式**
+```
+语法：
+   COLUMN [DATA TYPE] [GENERATED ALWAYS] AS (COLUMN_EXPRESSION) [VIRTUAL]
+```
+
+**主要特征:**
++ 虚拟列仅仅支持堆表，全局临时表、对象表、簇表、外部表、IOT索引组织表不支持创建虚拟列。
++ 可以基于虚拟列进行分区
++ 虚拟列可以添加约束、索引，而且可以被使用在 DQL、DML、DDL语句中，但是不可以使用于UPDATE的SET字句中、UPDATE和DELETE的WHERE字句中
++ 数据不可以INSERT到虚拟列中
++ 虚拟列可以收集统计信息
++ COLUMN_EXPRESSION不可以引用另外1个虚拟列; 列都来自同一张表; 可以引用deterministic的UDF(不能作为新分区键列)
++ 虚拟列数据类型不可以是oracle提供的数据类型，UDT,LOB,LONG RAW
+
+
 ### 二、转换规则
 
 1. Oracle源库
