--- a/ppas/20181120/20181120_01.md
+++ b/ppas/20181120/20181120_01.md
@@ -23,25 +23,46 @@
 
 ### 二、转换规则
 
-1. Oracle源库
+ **1.Oracle源库**
 ```
--- 案例1：
-CREATE TABLE "ADAM"."TAB_VIRTUAL_COLUMN"
-   (    "EMP_ID" NUMBER,
-        "ENAME" VARCHAR2(20),
-        "JOB" VARCHAR2(20),
-        "SALARY" NUMBER,
-        "BONUS" NUMBER,
-        "TCOMP" NUMBER GENERATED ALWAYS AS ("SALARY" + "BONUS") VIRTUAL VISIBLE
-   );
+SQL> CREATE TABLE "OOMDB"."TAB_VIRTUAL_COLUMN"
+  2     (    "EMP_ID" NUMBER,
+  3          "ENAME" VARCHAR2(20),
+  4          "JOB" VARCHAR2(20),
+  5          "SALARY" NUMBER,
+  6          "BONUS" NUMBER,
+  7          "TCOMP" NUMBER GENERATED ALWAYS AS ("SALARY" + "BONUS") VIRTUAL VISIBLE
+  8     );
+
+Table created.
+
+SQL> 
+SQL> INSERT INTO OOMDB.TAB_VIRTUAL_COLUMN (emp_id,ename,job,salary,bonus)VALUES(1,'SCOTT','PRESIDENT','10000',10000);
+INSERT INTO OOMDB.TAB_VIRTUAL_COLUMN (emp_id,ename,job,salary,bonus)VALUES(2,'TIGER','PRESIDENT','20000',20000);
+
+1 row created.
+
+SQL> 
+1 row created.
+
+SQL> COMMIT;
+
+Commit complete.
+SQL> SELECT * FROM OOMDB.TAB_VIRTUAL_COLUMN;
+
+    EMP_ID ENAME                JOB                      SALARY      BONUS      TCOMP
+---------- -------------------- -------------------- ---------- ---------- ----------
+         1 SCOTT                PRESIDENT                 10000      10000      20000
+         2 TIGER                PRESIDENT                 20000      20000      40000
+
+SQL> 
 ```
 
-2. PPAS目标库
+**2. PPAS目标库**
 ```
--- 案例1：转换案例如下：
 -- 1.建表语句
-CREATE TABLE tab_vc
-  (
+CREATE TABLE TAB_VIRTUAL_COLUMN
+(
  emp_id     number  not null,
  ename      varchar2(20),
  job	    varchar2(20),
@@ -52,9 +73,24 @@ CREATE TABLE tab_vc
 
 -- 2. 触发器
 CREATE OR REPLACE TRIGGER trig_tab_vc
- BEFORE INSERT OR UPDATE ON tab_vc
+ BEFORE INSERT OR UPDATE ON OOMDB.TAB_VIRTUAL_COLUMN
  FOR EACH ROW
 BEGIN
   NEW.tcomp = NEW.salary + NEW.bonus;
 END;
+
+-- 3. 插入数据
+INSERT INTO OOMDB.TAB_VIRTUAL_COLUMN (emp_id,ename,job,salary,bonus)VALUES(1,'SCOTT','PRESIDENT','10000',10000);
+INSERT INTO OOMDB.TAB_VIRTUAL_COLUMN (emp_id,ename,job,salary,bonus)VALUES(2,'TIGER','PRESIDENT','20000',20000);
+COMMIT;
+
+ppasdb=# select * from OOMDB.TAB_VIRTUAL_COLUMN;
+ emp_id | ename |    job    | salary | bonus | tcomp 
+--------+-------+-----------+--------+-------+-------
+      1 | SCOTT | PRESIDENT |  10000 | 10000 | 20000
+      2 | TIGER | PRESIDENT |  20000 | 20000 | 40000
+(2 rows)
+
+ppasdb=# 
+
 ```
