--- a/ppas/20181121/20181121_01.md
+++ b/ppas/20181121/20181121_01.md
@@ -2,4 +2,31 @@
 ---
 
 ### 一、背景介绍
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;全局临时表(GLOBAL TEMPORARY TABLE)
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;全局临时表(GLOBAL TEMPORARY TABLE)用于保存事务或会话期间的中间结果集。全局临时表的定义对所有session都是可见的，但是数据只对向全局临时表插入数据的session有效。主要有transaction-specific和session-specific两种，主要区别如下：
+  + transaction-specific：ON COMMIT DELETE ROWS ，事务commit，清理数据。
+  + session-specific：ON COMMIT PRESERVE ROWS，会话断开，清理数据。
+
+**1.Oracle**
+
+```
+语法：
+  CREATE [ GLOBAL TEMPORARY ] TABLE [schema].table_mame(
+	.......
+  )
+  [ ON COMMIT { PRESERVE ROWS | DELETE ROWS } ]
+  [ TABLESPACE tablespace_name ];
+```
+***主要特征：***
+1. 全局临时表不支持分布式事务
+2. 全局临时表只支持TABLESPACE段属性
+3. 全局临时表不支持并行 UPDATE, DELETE 和 MERGE
+4. 全局临时表不能包含嵌套表的列
+5. 全局临时表不能指定外键约束
+6. 全局临时表LOB_storage_clause: TABLESPACE, storage_clause, logging_clause不能指定
+7. 全局临时表partitioned, clustered, 或者 index organized
+8. 全局临时表可以创建索引(索引也是临时的)，且段不是CREATE创建时立马创建的，而是首次插入数据时才生成的
+
+**2.PPAS**
+
+
+
