--- a/ppas/20181121/20181121_01.md
+++ b/ppas/20181121/20181121_01.md
@@ -3,8 +3,8 @@
 
 ### 一、背景介绍
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;全局临时表(GLOBAL TEMPORARY TABLE)用于保存事务或会话期间的中间结果集。全局临时表的定义对所有session都是可见的，但是数据只对向全局临时表插入数据的session有效。主要有transaction-specific和session-specific两种，主要区别如下：
-  + transaction-specific：ON COMMIT DELETE ROWS ，事务commit，清理数据。
-  + session-specific：ON COMMIT PRESERVE ROWS，会话断开，清理数据。
+  + ***transaction-specific***：ON COMMIT DELETE ROWS ，事务commit，清理数据。
+  + ***session-specific***：ON COMMIT PRESERVE ROWS，会话断开，清理数据。
 
 **1.Oracle**
 
@@ -27,6 +27,21 @@
 8. 全局临时表可以创建索引(索引也是临时的)，且段不是CREATE创建时立马创建的，而是首次插入数据时才生成的
 
 **2.PPAS**
+```
+语法：
+  CREATE [ [ GLOBAL | LOCAL ] { TEMPORARY | TEMP } ] TABLE [ IF NOT EXISTS ] table_name (
+	......
+  )
+  [ ON COMMIT { PRESERVE ROWS | DELETE ROWS | DROP } ]
+  [ TABLESPACE tablespace_name ];
+```
+***主要特征：***
+1. 临时表会话session结束时自动删除，相同的名字的物理表和临时表同时存在时，物理表对当前session是不可见的，除非指定schema前缀。
+2. 临时表上的索引也是临时的。
+3. Autovacuum守护进程不能vacuum 或者 analyze 临时表，临时表在复杂查询中，建议对临时表进行ANALYZE。
+4. 可选的GLOBAL 或 LOCAL 可以被写在TEMPORARY 或 TEMP 前面，存在与否在PostgreSQL没有区别，因此被废弃了。
+
+
 
 
 
