--- a/ppas/20181121/20181121_01.md
+++ b/ppas/20181121/20181121_01.md
@@ -26,7 +26,7 @@
 7. 全局临时表partitioned, clustered, 或者 index organized
 8. 全局临时表可以创建索引(索引也是临时的)，且段不是CREATE创建时立马创建的，而是首次插入数据时才生成的
 
-**2.PPAS**
+**2.PPAS/PG**
 ```
 语法：
   CREATE [ [ GLOBAL | LOCAL ] { TEMPORARY | TEMP } ] TABLE [ IF NOT EXISTS ] table_name (
