--- a/ppas/20181121/20181121_01.md
+++ b/ppas/20181121/20181121_01.md
@@ -17,14 +17,14 @@
   [ TABLESPACE tablespace_name ];
 ```
 ***主要特征：***
-1. 全局临时表不支持分布式事务
-2. 全局临时表只支持TABLESPACE段属性
-3. 全局临时表不支持并行 UPDATE, DELETE 和 MERGE
-4. 全局临时表不能包含嵌套表的列
-5. 全局临时表不能指定外键约束
-6. 全局临时表LOB_storage_clause: TABLESPACE, storage_clause, logging_clause不能指定
-7. 全局临时表partitioned, clustered, 或者 index organized
-8. 全局临时表可以创建索引(索引也是临时的)，且段不是CREATE创建时立马创建的，而是首次插入数据时才生成的
+1. 全局临时表不支持分布式事务。
+2. 全局临时表只支持TABLESPACE段属性。
+3. 全局临时表不支持并行 UPDATE, DELETE 和 MERGE。
+4. 全局临时表不能包含嵌套表的列。
+5. 全局临时表不能指定外键约束。
+6. 全局临时表LOB_storage_clause: TABLESPACE, storage_clause, logging_clause不能指定。
+7. 全局临时表partitioned, clustered, 或者 index organized。
+8. 全局临时表可以创建索引(索引也是临时的)，且段不是CREATE创建时立马创建的，而是首次插入数据时才生成的。
 
 **2.PPAS/PG**
 ```
@@ -41,6 +41,13 @@
 3. Autovacuum守护进程不能vacuum 或者 analyze 临时表，临时表在复杂查询中，建议对临时表进行ANALYZE。
 4. 可选的GLOBAL 或 LOCAL 可以被写在TEMPORARY 或 TEMP 前面，存在与否在PostgreSQL没有区别，因此被废弃了。
 
+
+**注意:** <font style="color:bulue;">Oracle和PG/PPAS的全局临时表的最大差异在于session退出时，全局临时表的定义是否被清理（Oracle保留；PG/PPAS清理）。</font>
+
+### 二、转换规则
+
+
+### 三、参考链接
 
 
 
