--- a/ppas/20181121/20181121_01.md
+++ b/ppas/20181121/20181121_01.md
@@ -42,7 +42,8 @@
 4. 可选的GLOBAL 或 LOCAL 可以被写在TEMPORARY 或 TEMP 前面，存在与否在PostgreSQL没有区别，因此被废弃了。
 
 
-**注意:** <font style="color:bulue;">Oracle和PG/PPAS的全局临时表的最大差异在于session退出时，全局临时表的定义是否被清理（Oracle保留；PG/PPAS清理）。</font>
+**注意:** Oracle和PG/PPAS全局临时表最大差异在于session退出时，全局临时表的定义是否被清理（Oracle保留；PG/PPAS清理）。
+
 
 ### 二、转换规则
 
