--- a/ppas/20181121/20181121_01.md
+++ b/ppas/20181121/20181121_01.md
@@ -47,6 +47,13 @@
 
 ### 二、转换规则
 
+**1.transaction-specific:ON COMMIT DELETE ROWS转换规则**
+
+
+**2.session-specific:ON COMMIT PRESERVE ROWS转换规则**
+
+
+
 
 ### 三、参考链接
 1. [https://docs.oracle.com/cd/E11882_01/server.112/e41084/statements_7002.htm#SQLRF01402](https://docs.oracle.com/cd/E11882_01/server.112/e41084/statements_7002.htm#SQLRF01402)
