--- a/ppas/20181121/20181121_01.md
+++ b/ppas/20181121/20181121_01.md
@@ -47,11 +47,19 @@
 
 ### 二、转换规则
 
-**1.transaction-specific:ON COMMIT DELETE ROWS转换规则**
+**1.【transaction-specific】:ON COMMIT DELETE ROWS 转换规则**
++Oracle源端
 
 
-**2.session-specific:ON COMMIT PRESERVE ROWS转换规则**
++PPAS/PG目标端
 
+
+
+**2.【session-specific】:ON COMMIT PRESERVE ROWS 转换规则**
++Oracle源端
+
+
++PPAS/PG目标端
 
 
 
