--- a/ppas/20181121/20181121_01.md
+++ b/ppas/20181121/20181121_01.md
@@ -50,7 +50,34 @@
 **1.【transaction-specific】:ON COMMIT DELETE ROWS 转换规则**
 
 + Oracle源端
+```
+CREATE GLOBAL TEMPORARY TABLE tab_trans_temp(
+ ts       TIMESTAMP,
+ action   CHAR(100),
+ state    CHAR(50)
+ ) ON COMMIT DELETE ROWS;
+ 
+INSERT INTO tab_trans_temp VALUES (current_timestamp, 'node-1-request sent.', 'OK');
+INSERT INTO tab_trans_temp VALUES (current_timestamp, 'node-2-request sent.', 'OK');
+INSERT INTO tab_trans_temp VALUES (current_timestamp, 'node-1-answer received.', 'Failed');
+INSERT INTO tab_trans_temp VALUES (current_timestamp, 'node-2-answer received.', 'OK');
 
+SQL> SELECT * FROM tab_trans_temp WHERE state = 'OK';
+
+TS						ACTION				STATE
+-------------------------------- ----------------------------------------------------------------------------------------------------
+24-JUL-18 01.02.32.509957 PM			node-1-request sent.		OK
+24-JUL-18 01.02.32.511549 PM			node-2-request sent.		OK
+24-JUL-18 01.02.32.512975 PM			node-2-answer received.		OK
+
+-- 事务级别的，提交后数据丢失
+SQL> COMMIT;                                                         
+
+SQL> SELECT * FROM tab_trans_temp WHERE state = 'OK';
+
+no rows selected
+
+```
 
 + PPAS/PG目标端
 
