--- a/ppas/20181121/20181121_01.md
+++ b/ppas/20181121/20181121_01.md
@@ -86,7 +86,49 @@ no rows selected
 **2.【session-specific】:ON COMMIT PRESERVE ROWS 转换规则**
 
 + Oracle源端
+```
+SQL> conn oomdb/oracle
 
+CREATE GLOBAL TEMPORARY TABLE tab_session_temp(
+ ts       TIMESTAMP,
+ action   CHAR(100),
+ state    CHAR(50)
+ ) ON COMMIT PRESERVE ROWS;
+ 
+INSERT INTO tab_session_temp VALUES (current_timestamp, 'node-1-request sent.', 'OK');
+INSERT INTO tab_session_temp VALUES (current_timestamp, 'node-2-request sent.', 'OK');
+INSERT INTO tab_session_temp VALUES (current_timestamp, 'node-1-answer received.', 'Failed');
+INSERT INTO tab_session_temp VALUES (current_timestamp, 'node-2-answer received.', 'OK');
+
+SQL> SELECT * FROM tab_session_temp WHERE state = 'OK';
+
+TS						ACTION				STATE
+-------------------------------- ----------------------------------------------------------------------------------------------------
+24-JUL-18 01.02.32.509957 PM			node-1-request sent.		OK
+24-JUL-18 01.02.32.511549 PM			node-2-request sent.		OK
+24-JUL-18 01.02.32.512975 PM			node-2-answer received.		OK
+
+-- 事务提交，数据不丢失
+SQL> COMMIT;           
+
+SQL> SELECT * FROM tab_session_temp WHERE state = 'OK';
+
+TS						ACTION				STATE
+-------------------------------- ----------------------------------------------------------------------------------------------------
+24-JUL-18 01.02.32.509957 PM			node-1-request sent.		OK
+24-JUL-18 01.02.32.511549 PM			node-2-request sent.		OK
+24-JUL-18 01.02.32.512975 PM			node-2-answer received.		OK
+
+-- 断开重连，数据丢失
+SQL> disconnect;
+-- Connect again
+SQL> conn oomdb/oracle
+Connected.
+SQL> 
+SQL> SELECT * FROM tab_session_temp WHERE state = 'OK';
+
+no rows selected
+```
 
 + PPAS/PG目标端
 
