--- a/ppas/20181121/20181121_01.md
+++ b/ppas/20181121/20181121_01.md
@@ -80,7 +80,60 @@ no rows selected
 ```
 
 + PPAS/PG目标端
+```
+-- 1. 建立影子表
+CREATE UNLOGGED TABLE tab_trans_temp_backend (
+ ts       TIMESTAMP,
+ action   CHAR(100),
+ state    CHAR(50)
+ );
 
+-- 2. 建立视图（全局临时表修改为视图）
+CREATE VIEW tab_trans_temp AS SELECT * FROM tab_trans_temp_backend;
+
+-- 3. 创建事件触发器
+CREATE OR REPLACE FUNCTION tab_trans_temp_insert()
+ RETURNS TRIGGER
+ LANGUAGE plpgsql
+ AS
+ $function$
+BEGIN
+    INSERT INTO tab_local_trans_temp_backend VALUES(NEW.*);
+    RETURN NEW;
+    EXCEPTION WHEN undefined_table THEN
+      CREATE TEMP TABLE tab_local_trans_temp_backend () INHERITS (tab_trans_temp_backend)
+       ON COMMIT DELETE ROWS;
+      INSERT INTO tab_local_trans_temp_backend VALUES(NEW.*);
+      RETURN NEW;
+END;
+$function$;
+
+CREATE TRIGGER insert_trigger_gt INSTEAD OF INSERT ON tab_trans_temp
+FOR EACH ROW EXECUTE PROCEDURE tab_trans_temp_insert();
+
+
+BEGIN;
+INSERT INTO tab_trans_temp VALUES (current_timestamp, 'node-1-request sent.', 'OK');
+INSERT INTO tab_trans_temp VALUES (current_timestamp, 'node-2-request sent.', 'OK');
+INSERT INTO tab_trans_temp VALUES (current_timestamp, 'node-1-answer received.', 'Failed');
+INSERT INTO tab_trans_temp VALUES (current_timestamp, 'node-2-answer received.', 'OK');
+
+SELECT * FROM tab_trans_temp WHERE state = 'OK';
+ts             		  |              action                                                |   state
+--------------------------+--------------------------------------------------------------------+----------------
+03-JUL-17 11:34:44.074603 | node-1-request sended.                                             | OK
+03-JUL-17 11:34:44.079148 | node-2-request sended.                                             | OK
+03-JUL-17 11:34:44.081194 | node-2-answer received.                                            | OK
+(3 rows)
+
+COMMIT;
+
+SELECT * FROM tab_trans_temp WHERE state = 'OK';
+ts | action | state
+----+--------+-------
+(0 rows)
+
+```
 
 
 **2.【session-specific】:ON COMMIT PRESERVE ROWS 转换规则**
