--- a/ppas/20181121/20181121_01.md
+++ b/ppas/20181121/20181121_01.md
@@ -184,8 +184,80 @@ no rows selected
 ```
 
 + PPAS/PG目标端
+```
+-- 1. 创建影子表
+CREATE UNLOGGED TABLE tab_session_temp_backend (
+ ts       TIMESTAMP,
+ action   CHAR(100),
+ state    CHAR(50)
+ );
+
+-- 2. 创建视图
+CREATE VIEW tab_session_temp AS SELECT * FROM tab_session_temp_backend;
+
+-- 3. 创建事件触发器
+CREATE OR REPLACE FUNCTION tab_session_temp_insert()
+ RETURNS TRIGGER
+ LANGUAGE plpgsql
+ AS
+ $function$
+BEGIN
+    INSERT INTO tab_local_session_temp_backend VALUES(NEW.*);
+    RETURN NEW;
+    EXCEPTION WHEN undefined_table THEN
+      CREATE TEMP TABLE tab_local_session_temp_backend () INHERITS (tab_session_temp_backend)
+     -- ON COMMIT DELETE ROWS;
+	ON COMMIT PRESERVE ROWS;
+      INSERT INTO tab_local_session_temp_backend VALUES(NEW.*);
+      RETURN NEW;
+END;
+$function$;
 
 
+CREATE TRIGGER insert_trigger_gt INSTEAD OF INSERT ON tab_session_temp
+FOR EACH ROW EXECUTE PROCEDURE tab_session_temp_insert();
+
+-- 4. 测试
+BEGIN;
+INSERT INTO tab_session_temp VALUES (current_timestamp, 'node-1-request sent.', 'OK');
+INSERT INTO tab_session_temp VALUES (current_timestamp, 'node-2-request sent.', 'OK');
+INSERT INTO tab_session_temp VALUES (current_timestamp, 'node-1-answer received.', 'Failed');
+INSERT INTO tab_session_temp VALUES (current_timestamp, 'node-2-answer received.', 'OK');
+
+edb=# SELECT * FROM tab_session_temp WHERE state = 'OK';
+            ts             |                        action                                    |    state                        
+---------------------------+------------------------------------------------------------------+-------------
+ 24-JUL-18 13:34:26.708456 | node-1-request sent.                                             | OK                                                
+ 24-JUL-18 13:34:26.712493 | node-2-request sent.                                             | OK                                                
+ 24-JUL-18 13:34:26.715809 | node-2-answer received.                                          | OK                                                
+(3 rows)
+
+edb=# commit;
+COMMIT
+edb=# SELECT * FROM tab_session_temp WHERE state = 'OK';
+            ts             |                        action                                    |    state                        
+---------------------------+------------------------------------------------------------------+-------------
+ 24-JUL-18 13:34:26.708456 | node-1-request sent.                                             | OK                                                
+ 24-JUL-18 13:34:26.712493 | node-2-request sent.                                             | OK                                                
+ 24-JUL-18 13:34:26.715809 | node-2-answer received.                                          | OK                                                
+(3 rows)
+
+-- Exit Session
+edb=# \q
+
+-- Relogin 
+[edb@test ~]# /opt/edb/as10/bin/psql -U enterprisedb -d edb -p 5444
+psql.bin (10.4.9)
+Type "help" for help.
+
+
+edb=# SELECT * FROM tab_session_temp WHERE state = 'OK';
+ ts | action | state 
+----+--------+-------
+(0 rows)
+
+edb=# 
+```
 
 ### 三、参考链接
 1. [https://docs.oracle.com/cd/E11882_01/server.112/e41084/statements_7002.htm#SQLRF01402](https://docs.oracle.com/cd/E11882_01/server.112/e41084/statements_7002.htm#SQLRF01402)
