--- a/ppas/20181122/20181122_01.md
+++ b/ppas/20181122/20181122_01.md
@@ -8,9 +8,9 @@
 SELECT * FROM TABLE(function_name(...))
 ```
 
-### 二、
+### 二、参考链接
+1.[https://github.com/digoal/blog/blob/master/201603/20160318_01.md](https://github.com/digoal/blog/blob/master/201603/20160318_01.md)
+2.[https://github.com/digoal/blog/blob/master/201709/20170927_01.md](https://github.com/digoal/blog/blob/master/201709/20170927_01.md)
 
 
-https://github.com/digoal/blog/blob/master/201603/20160318_01.md
 
-https://github.com/digoal/blog/blob/master/201709/20170927_01.md
