--- a/ppas/20181122/20181122_01.md
+++ b/ppas/20181122/20181122_01.md
@@ -3,7 +3,9 @@
 
 ### 一、Oracle管道函数（Pipelined Table Function）
 
-返回 **table function** 的结果集，table function 返回集合collect类型（nested table 或 varray），table function查询如下：
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PIPELINED函数返回集合记录（nested table 或 varray），查询就如同查询物理数据库TABLE。
+
+**Table function查询语法：**
 ```
 SELECT * FROM TABLE(function_name(...))
 ```
