--- a/ppas/20181122/20181122_01.md
+++ b/ppas/20181122/20181122_01.md
@@ -5,7 +5,7 @@
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PIPELINED函数返回集合记录（nested table 或 varray），查询就如同查询物理数据库TABLE。
 
-**Table function查询语法：**
+**Table Function查询语法：**
 ```
 SELECT * FROM TABLE(function_name(...))
 ```
