--- a/ppas/20181122/20181122_01.md
+++ b/ppas/20181122/20181122_01.md
@@ -3,7 +3,7 @@
 
 ### 一、Oracle管道函数（Pipelined Table Function）
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PIPELINED函数返回集合记录（nested table 或 varray），查询就如同查询物理数据库TABLE。
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PIPELINED函数返回集合（collect）记录（nested table 或 varray），查询就如同查询物理数据库TABLE。
 
 **Table Function查询语法：**
 ```
