--- a/ppas/20181122/20181122_01.md
+++ b/ppas/20181122/20181122_01.md
@@ -10,6 +10,10 @@
 SELECT * FROM TABLE(function_name(...))
 ```
 
+PPAS: 通过函数返回 RETURN TYPE, RETURN TABLE, RETURN SETOF RECORDS 代替 PIPELINED 函数。
+
+
+
 ### 二、参考链接
 1. [https://github.com/digoal/blog/blob/master/201603/20160318_01.md](https://github.com/digoal/blog/blob/master/201603/20160318_01.md)
 2. [https://github.com/digoal/blog/blob/master/201709/20170927_01.md](https://github.com/digoal/blog/blob/master/201709/20170927_01.md)
