--- a/ppas/20181122/20181122_01.md
+++ b/ppas/20181122/20181122_01.md
@@ -10,11 +10,16 @@
 SELECT * FROM TABLE(function_name(...))
 ```
 
+
+### 二、PPAS
+
 PPAS: 通过函数返回 RETURN TYPE, RETURN TABLE, RETURN SETOF RECORDS 代替 PIPELINED 函数。
 
 
+### 三、转换规则
 
-### 二、参考链接
+
+### 四、参考链接
 1. [https://github.com/digoal/blog/blob/master/201603/20160318_01.md](https://github.com/digoal/blog/blob/master/201603/20160318_01.md)
 2. [https://github.com/digoal/blog/blob/master/201709/20170927_01.md](https://github.com/digoal/blog/blob/master/201709/20170927_01.md)
 
