--- a/ppas/20181122/20181122_01.md
+++ b/ppas/20181122/20181122_01.md
@@ -11,9 +11,9 @@ SELECT * FROM TABLE(function_name(...))
 ```
 
 
-### 二、PPAS
+### 二、PPAS/PG处理方式
 
-PPAS: 通过函数返回 RETURN TYPE, RETURN TABLE, RETURN SETOF RECORDS 代替 PIPELINED 函数。
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;通过函数返回 RETURN TYPE, RETURN TABLE, RETURN SETOF RECORDS 代替 PIPELINED 函数。
 
 
 ### 三、转换规则
