--- a/ppas/20180716/20180716_01.md
+++ b/ppas/20180716/20180716_01.md
@@ -44,7 +44,7 @@
 ```
 3. 带聚合函数，如：SUM(NAME)：双引号保留
 4. 标示符包含小写字母：双引号保留
-5. 标示符是数字开头：双引号保留
+5. 标示符非字母开头（如：数字开头、字符开头_#等）：双引号保留
 
 6. 关键字：需要标记，见[关键字](https://github.com/oomdb/ora2opendb/blob/master/ppas/20180628/20180628_01.md)部分
 
