--- a/ppas/20190222/20190222.md
+++ b/ppas/20190222/20190222.md
@@ -1,2 +1,2 @@
-## Oracle PPAS 兼容性分析 之 系统保留列（oid、tableoid、xmin、cmin、xmax、xmax、ctid）
+## Oracle PPAS 兼容性分析 之 系统列（oid、tableoid、xmin、cmin、xmax、xmax、ctid）
 ---
