--- a/ppas/20190222/20190222.md
+++ b/ppas/20190222/20190222.md
@@ -2,9 +2,11 @@
 ---
 
 ### 一、背景介绍
-
+PPAS/PostgreSQL数据中的每一个表都拥有一些由系统隐式定义的系统列，这些列的名字不能像用户定义的列一样使用（注意这种限制与名称是否为关键词没有关系，即便用引号限定一个名称也无法绕过这种限制）。
 
 ### 二、转换规则
+
+
 
 
 ### 三、参考链接
