--- a/ppas/20190222/20190222.md
+++ b/ppas/20190222/20190222.md
@@ -2,7 +2,15 @@
 ---
 
 ### 一、背景介绍
-PPAS/PostgreSQL数据中的每一个表都拥有一些由系统隐式定义的系统列，这些列的名字不能像用户定义的列一样使用（注意这种限制与名称是否为关键词没有关系，即便用引号限定一个名称也无法绕过这种限制）。
+PPAS/PostgreSQL数据库中的每一个表都拥有一些由系统隐式定义的系统列，这些列的名字不能像用户定义的列一样使用（注意这种限制与名称是否为关键词没有关系，即便用引号限定一个名称也无法绕过这种限制）。主要包括以下几个：
+
++ oid: 一行的对象标识符（对象ID）。该列只有在表使用WITH OIDS创建时或者default_with_oids配置变量被设置时才存在。该列的类型为oid（与列名一致）。
++ tableoid: 包含这一行的表的OID。该列是特别为从继承层次中选择的查询而准备，因为如果没有它将很难知道一行来自于哪个表。tableoid可以与pg_class的oid列进行连接来获得表的名称。
++ xmin: 插入该行版本的事务身份（事务ID）。一个行版本是一个行的一个特别版本，对一个逻辑行的每一次更新都将创建一个新的行版本。
++ cmin: 插入事务中的命令标识符（从0开始）。
++ xmax: 删除事务的身份（事务ID），对于未删除的行版本为0。对于一个可见的行版本，该列值也可能为非零。这通常表示删除事务还没有提交，或者一个删除尝试被回滚。
++ cmax: 删除事务中的命令标识符，或者为0。
++ ctid: 行版本在其表中的物理位置。注意尽管ctid可以被用来非常快速地定位行版本，但是一个行的ctid会在被更新或者被VACUUM FULL移动时改变。因此，ctid不能作为一个长期行标识符。OID或者最好是一个用户定义的序列号才应该被用来标识逻辑行。
 
 ### 二、转换规则
 
