--- a/ppas/20190222/20190222.md
+++ b/ppas/20190222/20190222.md
@@ -35,9 +35,37 @@ SQL>
 **2. PPAS/PostgreSQL数据库**
 + **系统列改名**
 ```
-111111
+ppasdb=# show default_with_oids;
+ default_with_oids 
+-------------------
+ off
+(1 row)
 
+ppasdb=# 
+ppasdb=# create table tab_system_column(
+ppasdb(#  oid int,      -- oid 列受参数default_with_oids的控制，为true则不允许创建该列名，否则可以创建。
+ppasdb(#  tableoid int,
+ppasdb(#     cmin int,
+ppasdb(#     cmax int,
+ppasdb(#     xmin int,
+ppasdb(#     xmax int
+ppasdb(# );
+错误:  字段名 "tableoid" 与系统字段名冲突
+ppasdb=# 
+
+-- 更改系统列的名称
+ppasdb=# create table tab_system_column(
+ppasdb(#  oid_shadow int,      
+ppasdb(#  tableoid_shadow int,
+ppasdb(#     cmin_shadow int,
+ppasdb(#     cmax_shadow int,
+ppasdb(#     xmin_shadow int,
+ppasdb(#     xmax_shadow int
+ppasdb(# );
+CREATE TABLE
+ppasdb=# 
 ```
+**<font style="color:red;">注意：如果列名更改，引用该列名的SQL都需要做修改，就需要找出依赖关系，进行批量修改。</font>**
 
 + **影子表 + 视图（VIEW）**
 ```
