--- a/ppas/20190222/20190222.md
+++ b/ppas/20190222/20190222.md
@@ -65,7 +65,7 @@ ppasdb(# );
 CREATE TABLE
 ppasdb=# 
 ```
-**<font style="color:red;">注意：如果列名更改，引用该列名的SQL都需要做修改，就需要找出依赖关系，进行批量修改。</font>**
+<font style="color:red;">注意：如果列名更改，引用该列名的SQL都需要做修改，就需要找出依赖关系，进行批量修改。</font>
 
 + **影子表 + 视图（VIEW）**
 ```
