--- a/ppas/20190222/20190222.md
+++ b/ppas/20190222/20190222.md
@@ -66,7 +66,8 @@ CREATE TABLE
 ppasdb=# 
 ```
 
-<font style="color:red;">注意：如果列名更改，引用该列名的SQL都需要做修改，就需要找出依赖关系，进行批量修改。</font>
+$\color{red}{注意：如果列名更改，引用该列名的SQL都需要做修改，就需要找出依赖关系，进行批量修改。}$
+
 
 + **影子表 + 视图（VIEW）**
 ```
