--- a/ppas/20190222/20190222.md
+++ b/ppas/20190222/20190222.md
@@ -51,7 +51,7 @@ ppasdb(#     xmin int,
 ppasdb(#     xmax int
 ppasdb(# );
 错误:  字段名 "tableoid" 与系统字段名冲突
-ppasdb=# 
+
 
 -- 更改系统列的名称
 ppasdb=# create table tab_system_column(
@@ -68,9 +68,57 @@ ppasdb=#
 
 <font color=#FF0000>注意：如果列名更改，引用该列名的SQL都需要做修改，就需要找出依赖关系，进行批量修改。</font>
 
+
 + **影子表 + 视图（VIEW）**
 ```
-111111111
+-- 创建影子表
+ppasdb=# create table tab_system_column_shadow(
+ppasdb(#  oid_shadow int,      
+ppasdb(#  tableoid_shadow int,
+ppasdb(#     cmin_shadow int,
+ppasdb(#     cmax_shadow int,
+ppasdb(#     xmin_shadow int,
+ppasdb(#     xmax_shadow int
+ppasdb(# );
+CREATE TABLE
+
+-- 创建视图：用于交互的虚表名
+ppasdb=# create view tab_system_column 
+ppasdb-# as 
+ppasdb-# select oid_shadow  as oid,      
+ppasdb-#     tableoid_shadow as tableoid,
+ppasdb-#        cmin_shadow as cmin,
+ppasdb-#        cmax_shadow as cmax,
+ppasdb-#        xmin_shadow as xmin,
+ppasdb-#        xmax_shadow as xmax
+ppasdb-#    from tab_system_column_shadow;
+CREATE VIEW
+
+-- 简单的CURD操作
+ppasdb=# insert into tab_system_column values(1,2,3,4,5,6);
+INSERT 0 1
+ppasdb=# select * from tab_system_column;
+ oid | tableoid | cmin | cmax | xmin | xmax 
+-----+----------+------+------+------+------
+   1 |        2 |    3 |    4 |    5 |    6
+(1 row)
+
+ppasdb=# update tab_system_column set oid=10000 where oid=1;  
+UPDATE 1
+ppasdb=# select * from tab_system_column;                     
+  oid  | tableoid | cmin | cmax | xmin | xmax 
+-------+----------+------+------+------+------
+ 10000 |        2 |    3 |    4 |    5 |    6
+(1 row)
+
+ppasdb=# delete from tab_system_column where oid=10000;
+DELETE 1
+ppasdb=# select * from tab_system_column;
+ oid | tableoid | cmin | cmax | xmin | xmax 
+-----+----------+------+------+------+------
+(0 rows)
+
+ppasdb=# 
 
 ```
 
