--- a/ppas/20190223/20190223_01.md
+++ b/ppas/20190223/20190223_01.md
@@ -2,7 +2,19 @@
 ---
 
 ### 一、背景介绍
+Interval Partitioning 是Oracle 11g引入的新特性，是RANGE分区的一个扩展。
 
+使用Interval Partitioning的限制：
+
++ 分区键有且只能有一个，而且数据interval-partitioned类型必须是NUMBER/DATE。
++ IOT表（索引组织表）不支持Interval Partitioning。
++ interval-partitioned表不能创建 domain index。
+
+Interval Partition也可以创建复合分区：
+
++ Interval-range 
++ Interval-hash
++ Interval-list
 
 ### 二、转换规则
 
