--- a/ppas/20190223/20190223_01.md
+++ b/ppas/20190223/20190223_01.md
@@ -2,7 +2,7 @@
 ---
 
 ### 一、背景介绍
-Interval Partitioning 是Oracle 11g引入的新特性，是RANGE分区的一个扩展。
+Interval Partitioning 是Oracle 11g引入的新特性，是RANGE分区的一个扩展。自动创建分区。
 
 使用Interval Partitioning的限制：
 
@@ -15,6 +15,7 @@ Interval Partition也可以创建复合分区：
 + Interval-range 
 + Interval-hash
 + Interval-list
+
 
 ### 二、转换规则
 
