--- a/ppas/20190223/20190223_01.md
+++ b/ppas/20190223/20190223_01.md
@@ -19,6 +19,10 @@ Interval Partition也可以创建复合分区：
 + Interval-hash
 + Interval-list
 
+Interval Partition使用到的2个INTERVAL函数：
+
++ NUMTOYMINTERVAL
++ NUMTODSINTERVAL
 
 ### 二、转换规则
 
