--- a/ppas/20190223/20190223_01.md
+++ b/ppas/20190223/20190223_01.md
@@ -21,8 +21,9 @@ Interval Partition也可以创建复合分区：
 
 Interval Partition使用到的2个INTERVAL函数：
 
-+ NUMTOYMINTERVAL
-+ NUMTODSINTERVAL
++ NUMTOYMINTERVAL(n,'interval_unit')：参数n可以是任意NUMBER值或者任何能隐式转换为NUMBER值的表达式；参数interval_unit可以是CHAR, VARCHAR2, NCHAR, 或者 NVARCHAR2 类型，且可选值是'YEAR' 或者 'MONTH' 其中之一。interval_unit 大小写不区分，且精度默认是9。
+
++ NUMTODSINTERVAL(n,'interval_unit')：参数n可以是任意NUMBER值或者任何能隐式转换为NUMBER值的表达式；参数interval_unit可以是CHAR, VARCHAR2, NCHAR, 或者 NVARCHAR2 类型，且可选值是'DAY', 'HOUR', 'MINUTE', 'SECOND' 其中之一。interval_unit 大小写不区分，且精度默认是9。
 
 ### 二、转换规则
 
