--- a/ppas/20190223/20190223_01.md
+++ b/ppas/20190223/20190223_01.md
@@ -166,7 +166,10 @@ ppasdb=# select * from tab_interval_by_month_part_p201903;
 
 ```
 
-
+注意：
+   1. 通过Linux/Unix服务器的crontab每月定义添加。
+   2. 通过PgAgent数据库任务每月定时添加。
+   3. 通过JDBC的任务定时每月添加。
 
 ### 三、参考链接
 1.[https://github.com/pgpartman/pg_partman](https://github.com/pgpartman/pg_partman)
