--- a/ppas/20190223/20190223_01.md
+++ b/ppas/20190223/20190223_01.md
@@ -163,6 +163,7 @@ ppasdb=# select * from tab_interval_by_month_part_p201903;
   3 | wangwu | 14-FEB-19 08:00:00
 (1 row)
 
+-- 如果有普通索引，需要对每个新增的分区创建。
 
 ```
 
