--- a/ppas/20181121/20181121_01.md
+++ b/ppas/20181121/20181121_01.md
@@ -258,6 +258,8 @@ edb=# SELECT * FROM tab_session_temp WHERE state = 'OK';
 
 edb=# 
 ```
+或者 
+参见德哥博客：[PostgreSQL Oracle 兼容性之 - 全局临时表 global temp table](https://github.com/digoal/blog/blob/master/201807/20180715_01.md)
 
 ### 三、参考链接
 1. [https://docs.oracle.com/cd/E11882_01/server.112/e41084/statements_7002.htm#SQLRF01402](https://docs.oracle.com/cd/E11882_01/server.112/e41084/statements_7002.htm#SQLRF01402)
