--- a/ppas/20190223/20190223_02.md
+++ b/ppas/20190223/20190223_02.md
@@ -3,6 +3,9 @@
 ---
 
 ### 一、背景介绍
+SYS_CONTEXT('namespace','parameter'[,length]),SYS_CONTEXT 返回当前实例和context namespace相关联的parameter的值。使用的function可以是SQL或者PL/SQL语句，但是SYS_CONTEXT必须本地执行。
+
+
 
 ### 二、转换规则
 
