--- a/ppas/20190223/20190223_02.md
+++ b/ppas/20190223/20190223_02.md
@@ -3,11 +3,17 @@
 ---
 
 ### 一、背景介绍
-SYS_CONTEXT('namespace','parameter'[,length]),SYS_CONTEXT 返回当前实例和context namespace相关联的parameter的值。使用的function可以是SQL或者PL/SQL语句，但是SYS_CONTEXT必须本地执行。
+SYS_CONTEXT('namespace','parameter'[,length]),SYS_CONTEXT 返回当前实例和context namespace相关联的parameter的值。使用的function可以是SQL或者PL/SQL语句，但是SYS_CONTEXT必须本地执行。namespace可以是内置的，也可以自定义的CONTEXT。parameter值不区分大小写，且长度不超过 30 bytes。返回值的数据类型时VARCHAR2，默认最大长度是256 bytes，可以使用length参数覆盖此值，有效值范围：1 ~ 4000 bytes。Oracle提供2种内置的namespaces:
+
++ **USERENV**：主要描述当前会话，预定义的parameter值如下：
+
++ **SYS_SESSION_ROLES**：表示会话当前是否启动一个特殊的role，namespace 从 Oracle 11.2.0.4版本开始才可用。
 
 
 
 ### 二、转换规则
 
+
 ### 三、参考链接
 1. [https://github.com/digoal/blog/blob/master/201709/20170926_02.md](https://github.com/digoal/blog/blob/master/201709/20170926_02.md)
+2. [https://docs.oracle.com/cd/E11882_01/server.112/e41084/functions184.htm#SQLRF06117](https://docs.oracle.com/cd/E11882_01/server.112/e41084/functions184.htm#SQLRF06117)
