--- a/ppas/20190223/20190223_02.md
+++ b/ppas/20190223/20190223_02.md
@@ -5,7 +5,8 @@
 ### 一、背景介绍
 SYS_CONTEXT('namespace','parameter'[,length]),SYS_CONTEXT 返回当前实例和context namespace相关联的parameter的值。使用的function可以是SQL或者PL/SQL语句，但是SYS_CONTEXT必须本地执行。
 1. namespace可以是内置的，也可以自定义的CONTEXT。
-2. parameter值不区分大小写，且长度不超过 30 bytes。返回值的数据类型时VARCHAR2，默认最大长度是256 bytes，可以使用length参数覆盖此值，有效值范围：1 ~ 4000 bytes。
+2. parameter值不区分大小写，且长度不超过 30 bytes。
+3. SYS_CONTEXT返回值的数据类型时VARCHAR2，默认最大长度是256 bytes，可以使用length参数覆盖此值，length有效值范围：1 ~ 4000 bytes。
 
 Oracle提供2种内置的namespaces:
 
