--- a/ppas/20190223/20190223_02.md
+++ b/ppas/20190223/20190223_02.md
@@ -10,8 +10,9 @@ SYS_CONTEXT('namespace','parameter'[,length]),SYS_CONTEXT 返回当前实例和c
 
 Oracle提供2种内置的namespaces:
 
-+ **USERENV**：主要描述当前会话，预定义的parameter值如下：
-
++ **USERENV**：主要描述当前会话，预定义的parameter值可以参考：
+   [USERENV命名空间预定义参数值](https://docs.oracle.com/cd/E11882_01/server.112/e41084/functions184.htm#SQLRF06117)
+   
 + **SYS_SESSION_ROLES**：表示会话当前是否启动一个特殊的role，namespace 从 Oracle 11.2.0.4版本开始才可用。
 
 
