--- a/ppas/20190223/20190223_02.md
+++ b/ppas/20190223/20190223_02.md
@@ -19,6 +19,61 @@ Oracle提供2种内置的namespaces:
 
 ### 二、转换规则
 
++ **内置的Oracle命名空间**
+1. Oracle数据库
+```
+-- a. USERENV:返回当前登录的用户名
+SQL> SELECT SYS_CONTEXT ('USERENV', 'SESSION_USER') from dual;
+
+SYS_CONTEXT('USERENV','SESSION_USER')
+--------------------------------------------------------------------------------
+ADAM
+
+SQL> 
+
+-- b. SYS_SESSION_ROLES：查看当前用户是否有特定的数据库role的权限，返回结果是TRUE/FALSE。
+SQL> SELECT role FROM session_roles;
+
+ROLE
+------------------------------
+CONNECT
+RESOURCE
+
+SQL> SELECT SYS_CONTEXT('SYS_SESSION_ROLES', 'RESOURCE') from dual;
+
+SYS_CONTEXT('SYS_SESSION_ROLES','RESOURCE')
+--------------------------------------------------------------
+TRUE
+
+SQL> SELECT SYS_CONTEXT('SYS_SESSION_ROLES', 'DBA') from dual;
+
+SYS_CONTEXT('SYS_SESSION_ROLES','DBA')
+--------------------------------------------------------------
+FALSE
+
+SQL> 
+
+```
+2. PPAS数据库
+SYS_CONTEXT(namespace, attribute)，namespace的数据类型是VARCHAR2，只接受USERENV唯一一个值，任何其他值都会返回NULL；attribute的数据类型是VARCHAR2，可以接受的值如下：
+
+|属性值       |等价值          |
+|:-----------| :-------------|
+|SESSION_USER   |pg_catalog.session_user|
+|CURRENT_USER   |pg_catalog.current_user|
+|CURRENT_SCHEMA |pg_catalog.current_schema|
+|HOST           |pg_catalog.inet_host|
+|IP_ADDRESS     |pg_catalog.inet_client_addr|
+|SERVER_HOST    |pg_catalog.inet_server_addr|
+
+```
+
+```
+
+
++ **自定义的CONTEXT命名空间**
+
+
 
 ### 三、参考链接
 1. [https://github.com/digoal/blog/blob/master/201709/20170926_02.md](https://github.com/digoal/blog/blob/master/201709/20170926_02.md)
