--- a/ppas/20190223/20190223_02.md
+++ b/ppas/20190223/20190223_02.md
@@ -11,7 +11,7 @@ SYS_CONTEXT('namespace','parameter'[,length]),SYS_CONTEXT 返回当前实例和c
 Oracle提供2种内置的namespaces:
 
 + **USERENV**：主要描述当前会话，预定义的parameter值可以参考：
-   [USERENV命名空间预定义参数值](https://docs.oracle.com/cd/E11882_01/server.112/e41084/functions184.htm#SQLRF06117)
+   [USERENV命名空间预定义参数值。](https://docs.oracle.com/cd/E11882_01/server.112/e41084/functions184.htm#SQLRF06117)
    
 + **SYS_SESSION_ROLES**：表示会话当前是否启动一个特殊的role，namespace 从 Oracle 11.2.0.4版本开始才可用。
 
@@ -22,12 +22,20 @@ Oracle提供2种内置的namespaces:
 + **内置的Oracle命名空间**
 1. Oracle数据库
 ```
--- a. USERENV:返回当前登录的用户名
+-- a. USERENV:返回当前登录的用户名 和 语言环境
 SQL> SELECT SYS_CONTEXT ('USERENV', 'SESSION_USER') from dual;
 
 SYS_CONTEXT('USERENV','SESSION_USER')
 --------------------------------------------------------------------------------
 ADAM
+
+SQL> 
+
+SQL> SELECT USERENV('LANGUAGE') FROM dual; 
+
+USERENV('LANGUAGE')
+----------------------------------------------------
+AMERICAN_AMERICA.AL32UTF8
 
 SQL> 
 
@@ -67,9 +75,24 @@ SYS_CONTEXT(namespace, attribute)，namespace的数据类型是VARCHAR2，只接
 |SERVER_HOST    |pg_catalog.inet_server_addr|
 
 ```
+-- USERENV:返回当前登录的用户名 和 语言环境
+ppasdb=> SELECT SYS_CONTEXT ('USERENV', 'SESSION_USER') from dual;
+ sys_context 
+-------------
+ ppasuser
+(1 row)
+
+ppasdb=> 
+
+ppasdb=> SELECT USERENV('LANGUAGE') FROM dual; 
+错误:  函数 userenv(unknown) 不存在
+LINE 1: SELECT USERENV('LANGUAGE') FROM dual;
+               ^
+HINT:  没有匹配指定名称和参数类型的函数. 您也许需要增加明确的类型转换.
+ppasdb=> 
 
 ```
-
+关于PPAS的USERENV不支持的attribute可以参考：[PostgreSQL Oracle 兼容性 之 USERENV](https://github.com/digoal/blog/blob/master/201709/20170926_02.md)
 
 + **自定义的CONTEXT命名空间**
 
