--- a/ppas/20190223/20190223_02.md
+++ b/ppas/20190223/20190223_02.md
@@ -95,6 +95,10 @@ ppasdb=>
 关于PPAS的USERENV不支持的attribute可以参考：[PostgreSQL Oracle 兼容性 之 USERENV](https://github.com/digoal/blog/blob/master/201709/20170926_02.md)
 
 + **自定义的CONTEXT命名空间**
+1. Oracle数据库
+
+
+2. PPAS数据库
 
 
 
