--- a/ppas/20190223/20190223_02.md
+++ b/ppas/20190223/20190223_02.md
@@ -96,7 +96,35 @@ ppasdb=>
 
 + **自定义的CONTEXT命名空间**
 1. Oracle数据库
+自定义namespace指定parameter值，可以使用dbms_session.set_context方法进行。
+```
+SQL> create context test using sys_context_test;
 
+Context created.
+
+SQL> create or replace procedure sys_context_test(value in varchar2) is 
+  2  begin 
+  3      dbms_session.set_context('test','key',value); 
+  4  end sys_context_test; 
+  5  /
+
+Procedure created.
+
+SQL> 
+
+SQL>  exec sys_context_test('This is a context set value!');
+
+PL/SQL procedure successfully completed.
+
+SQL> select sys_context('test','key') show_value from dual;
+
+SHOW_VALUE
+-----------------------
+This is a context set value!
+
+SQL> 
+
+```
 
 2. PPAS数据库
 
