--- a/ppas/20190223/20190223_02.md
+++ b/ppas/20190223/20190223_02.md
@@ -74,6 +74,18 @@ SYS_CONTEXT(namespace, attribute)，namespace的数据类型是VARCHAR2，只接
 |IP_ADDRESS     |pg_catalog.inet_client_addr|
 |SERVER_HOST    |pg_catalog.inet_server_addr|
 
+Ora2PPAS/PG部分parameter的对应关系如下：
+|   Oracle    |  PPAS/PG  |  
+|:-----------| :-------------|
+|OS_USER\|SESSION_USER\|AUTHENTICATED_IDENTITY |session_user|
+|BG_JOB_ID|pg_backend_pid|
+|CLIENT_IDENTIFIER\|PROXY_USER|session_user|
+|CURRENT_SCHEMA|current_schema|
+|CURRENT_USER|current_user|
+|DB_NAME\|DB_UNIQUE_NAME|current_database|
+|HOST\|IP_ADDRESS|inet_client_addr()|
+|SERVER_HOST|inet_server_addr()|
+
 ```
 -- USERENV:返回当前登录的用户名 和 语言环境
 ppasdb=> SELECT SYS_CONTEXT ('USERENV', 'SESSION_USER') from dual;
