--- a/ppas/20190225/20190225_01.md
+++ b/ppas/20190225/20190225_01.md
@@ -1,9 +1,9 @@
 
-## Oracle PPAS 兼容性分析 之 DBTIMEZONE 用法
+## Oracle PPAS 兼容性分析 之 AT TIME ZONE DBTIMEZONE 用法
 ---
 
 ### 一、背景介绍
-
+AT TIME ZONE DBTIMEZONE 依据数据库时区来调整时间，主要受数据库DBTIMEZONE值控制。
 
 ### 二、转换规则
 
