--- a/ppas/20190225/20190225_01.md
+++ b/ppas/20190225/20190225_01.md
@@ -3,9 +3,19 @@
 ---
 
 ### 一、背景介绍
-AT TIME ZONE DBTIMEZONE 依据数据库时区来调整时间，主要受数据库DBTIMEZONE值控制。
+AT TIME ZONE DBTIMEZONE 依据数据库时区来调整时间，主要受数据库DBTIMEZONE值控制。DBTIMEZONE返回数据库时区值，返回值可以是time zone offset（如：at time zone '+00:00'） 或者 time zone region name（如：at time zone 'GMT')。
 
 ### 二、转换规则
+
+```
+SQL> SELECT SESSIONTIMEZONE, DBTIMEZONE FROM DUAL;
+
+SESSIONTIMEZONE                                                             DBTIME
+--------------------------------------------------------------------------- ------
++08:00                                                                      +00:00
+
+SQL> 
+```
 
 
 ### 三、参考链接
