--- a/ppas/20190225/20190225_01.md
+++ b/ppas/20190225/20190225_01.md
@@ -57,11 +57,15 @@ edb=# show timezone;
  PRC
 (1 row)
 
-edb=# 
+-- 要查看支持的时区名称的列表：
+edb=# select pg_timezone_names();
+-- 要查看支持的时区缩写的列表：
+edb=# select pg_timezone_abbrevs();
+
 
 -- PPAS 不支持dbtimezone属性，因此需要查询出Oracle具体的时区，然后在PPAS进行填充，如：at time zone '+00:00'
 -- Oracle的日期相减是：NUMBER类型；PPAS的日期相减是INTERVAL类型，因此需要做转换，把INTERVAL类型转换为秒，如：
--- extract(epoch from (inteval数据类型)) 
+-- extract(epoch from (inteval数据类型)) 。
 -- 需要把timestamp 关键字修改为timestamptz，因此标量值是带时区的。
 -- 转换结果如下：
 edb=# create table tab_dbtimezone(
@@ -87,3 +91,6 @@ edb=#
 
 
 ### 三、参考链接
+1. [https://www.postgresql.org/docs/10/functions-datetime.html#FUNCTIONS-DATETIME-ZONECONVERT](https://www.postgresql.org/docs/10/functions-datetime.html#FUNCTIONS-DATETIME-ZONECONVERT)
+2. [https://www.postgresql.org/docs/10/datatype-datetime.html#DATATYPE-TIMEZONES](https://www.postgresql.org/docs/10/datatype-datetime.html#DATATYPE-TIMEZONES)
+
