--- a/ppas/20190225/20190225_02.md
+++ b/ppas/20190225/20190225_02.md
@@ -27,6 +27,36 @@ string [NOT] LIKE pattern [ESCAPE escape-character]
 ```
 + 如果pattern不包含百分号或者下划线，那么该模式只代表它本身的串；这时候LIKE的行为就象等号操作符。在pattern里的下划线 （_）代表（匹配）任何单个字符； 而一个百分号（%）匹配任何零或更多个字符的序列。
 + 要匹配文本的下划线或者百分号，而不是匹配其它字符， 在pattern里相应的字符必须 前导转义字符。缺省的转义字符是反斜线，但是你可以用ESCAPE子句指定一个不同的转义字符。 要匹配转义字符本身，写两个转义字符。受参数standard_conforming_strings控制，默认是on，如果是off，则在文串常量中写的任何反斜线都需要被双写。
+```
+-- a. 使用默认转义字符串 (\\) 搜索包含“_”的字符串
+select tablename, "column" from pg_table_def 
+where "column" like '%start\\_%'
+limit 5;
+
+     tablename     |    column
+-------------------+---------------
+ stl_s3client      | start_time
+ stl_tr_conflict   | xact_start_ts
+ stl_undone        | undo_start_ts
+ stl_unload_log    | start_time
+ stl_vacuum_detail | start_row
+(5 rows)
+
+-- b. 指定“^”作为转义字符，然后使用该转义字符搜索包含“_”的字符串
+select tablename, "column" from pg_table_def 
+where "column" like '%start^_%' escape '^' 
+limit 5;
+
+     tablename     |    column
+-------------------+---------------
+ stl_s3client      | start_time
+ stl_tr_conflict   | xact_start_ts
+ stl_undone        | undo_start_ts
+ stl_unload_log    | start_time
+ stl_vacuum_detail | start_row
+(5 rows)
+
+```
 
  ILIKE 可以替换LIKE，可匹配不区分大小写，是PostgreSQL的扩展语法，类似操作符语法如下：
 
