--- a/ppas/20190225/20190225_02.md
+++ b/ppas/20190225/20190225_02.md
@@ -68,6 +68,9 @@ limit 5;
 ```
 
 **2.SIMILAR TO 正则表达式**
+```
+string [NOT] SIMILAR TO pattern [ESCAPE escape-character]
+```
 
 **3.POSIX 正则表达式**
 
