--- a/ppas/20190225/20190225_02.md
+++ b/ppas/20190225/20190225_02.md
@@ -78,6 +78,20 @@ string [NOT] SIMILAR TO pattern [ESCAPE escape-character]
 
 SIMILAR TO 支持下列模式匹配元字符：
 
+|运算符|说明|
+|:-----------| :-------------|
+|%   |匹配任意序列的零个或多个字符。|
+|_   |匹配任何单个字符。|
+|\|  |表示替换（两个替换中的一个）。|
+|*   |重复上一项目零次或更多次。|
+|+   |重复上一项目一次或更多次。|
+|?   |重复上一项目零次或一次。|
+|{m} |重复上一项目正好 m 次。|
+|{m,}    |重复上一项目 m 次或更多次。|
+|{m,n}   |重复上一项目至少 m 次且不超过 n 次。|
+|()  |圆括号将项分组为单个逻辑项。|
+|[...]   |括号表达式指定一个字符类，正如在 POSIX 正则表达式中一样。|
+
 
 
 **3.POSIX 正则表达式**
