--- a/ppas/20190225/20190225_02.md
+++ b/ppas/20190225/20190225_02.md
@@ -92,7 +92,12 @@ SIMILAR TO 支持下列模式匹配元字符：
 |()  |圆括号将项分组为单个逻辑项。|
 |[...]   |括号表达式指定一个字符类，正如在 POSIX 正则表达式中一样。|
 
-
+ 带3个参数的substring，即substring(string from pattern for escape-character)，提供了抽取一个匹配 SQL 正则表达式的子串的方法。为了标识在成功的时候应该返回的模式部分，模式 必须包含转义字符的两次出现，并且后面要跟上双引号（"）。匹配这两个标记之间的模式的文本将被返回。
+```
+-- 使用#"定界返回串
+substring('foobar' from '%#"o_b#"%' for '#')   oob
+substring('foobar' from '#"o_b#"%' for '#')    NULL
+```
 
 **3.POSIX 正则表达式**
 
