--- a/ppas/20190225/20190225_02.md
+++ b/ppas/20190225/20190225_02.md
@@ -72,7 +72,7 @@ limit 5;
 string [NOT] SIMILAR TO pattern [ESCAPE escape-character]
 ```
 + SIMILAR TO 运算符使用 SQL 标准正则表达式模式来匹配字符串表达式。和LIKE类似，SIMILAR TO使用_和%作为分别代表任意单个字符和任意串的通配符（类似 POSIX 正则表达式里的.和.*）
-+ 仅当模式与整个字符串匹配时，SIMILAR TO 运算符才会返回 true，这与 POSIX 正则表达式的行为不同（其中的模式可与字符串的任何部分匹配）。SIMILAR TO 执行区分大小写的匹配。
++ 仅当模式与【整个字符串】匹配时，SIMILAR TO 运算符才会返回 true，这与 POSIX 正则表达式的行为不同（其中的模式可与字符串的任何部分匹配）。SIMILAR TO 执行区分大小写的匹配。
 
 **注意：使用 SIMILAR TO 的正则表达式匹配的计算成本高昂。我们建议尽可能使用 LIKE，尤其是在处理非常多的行时。**
 
