--- a/ppas/20190225/20190225_02.md
+++ b/ppas/20190225/20190225_02.md
@@ -124,6 +124,19 @@ substring('foobar' from '#"o_b#"%' for '#')    NULL
 ```
 
 **3.POSIX 正则表达式**
+```
+string [ ! ] ~ [ * ] pattern
+```
+**正则表达式匹配操作符:**
+
+|操作符|描述|例子|
+|:-----------| :-------------| :-------------|
+|~   |匹配正则表达式，大小写敏感     |'thomas' ~ '.*thomas.*'|
+|~*  |匹配正则表达式，大小写不敏感   |'thomas' ~* '.*Thomas.*'|
+|!~  |不匹配正则表达式，大小写敏感   |'thomas' !~ '.*Thomas.*'|
+|!~* |不匹配正则表达式，大小写不敏感 |'thomas' !~* '.*vadim.*'|
+
+
 
 **注意：如果模式匹配超过了以上3种所能提供的，可以使用 Perl 或 Tcl 写一个用户定义的函数，进行模式匹配。**
 
