--- a/ppas/20190225/20190225_02.md
+++ b/ppas/20190225/20190225_02.md
@@ -127,6 +127,8 @@ substring('foobar' from '#"o_b#"%' for '#')    NULL
 ```
 string [ ! ] ~ [ * ] pattern
 ```
+POSIX 正则表达式提供了更强大的模式匹配手段。POSIX 正则表达式模式可匹配字符串的任何部分。
+
 **正则表达式匹配操作符:**
 
 |操作符|描述|例子|
@@ -136,6 +138,56 @@ string [ ! ] ~ [ * ] pattern
 |!~  |不匹配正则表达式，大小写敏感   |'thomas' !~ '.*Thomas.*'|
 |!~* |不匹配正则表达式，大小写不敏感 |'thomas' !~* '.*vadim.*'|
 
+**POSIX 模式匹配支持下列元字符：**
+
+|POSIX    |描述|
+|:-----------| :-------------|
+|.   |匹配任何单个字符。|
+|*   |匹配零或多个匹配项。|
+|+   |匹配一个或多个匹配项。|
+|?   |匹配零或一个匹配项。|
+|\|  |指定替换匹配项；例如，E \| H E表示 或 H.|
+|^   |匹配行首字符。|
+|$   |匹配行尾字符。|
+|$   |匹配字符串的结尾。|
+|[ ] |括号指定一个匹配列表，它应与列表中的一个表达式匹配。脱字号 (^) 位于不匹配列表之前，它与列表中表示的表达式之外的任何字符匹配。|
+|( ) |圆括号将项分组为单个逻辑项。|
+|{m} |重复上一项目正好 m 次。|
+|{m,}    |重复上一项目 m 次或更多次。|
+|{m,n}   |重复上一项目至少 m 次且不超过 n 次。|
+|[: :]   |匹配 POSIX 字符类中的任何字符。|
+
+```
+-- a. 查找名称包含 E 或 H 的所有城市
+select distinct city from users
+where city ~ '.*E.*|.*H.*' order by city;
+         city
+-----------------------
+ Agoura Hills
+ Auburn Hills
+ Benton Harbor
+ Beverly Hills
+ Chicago Heights
+ Chino Hills
+ Citrus Heights
+ East Hartford
+ 
+-- b. 使用转义字符串（“\\”）搜索包含句点的字符串
+select venuename from venue
+where venuename ~ '.*\\..*';
+
+       venuename
+-----------------------------
+Bernard B. Jacobs Theatre
+E.J. Nutter Center
+Hubert H. Humphrey Metrodome
+Jobing.com Arena
+St. James Theatre
+St. Pete Times Forum
+Superpages.com Center
+U.S. Cellular Field
+
+```
 
 
 **注意：如果模式匹配超过了以上3种所能提供的，可以使用 Perl 或 Tcl 写一个用户定义的函数，进行模式匹配。**
