--- a/ppas/20190225/20190225_02.md
+++ b/ppas/20190225/20190225_02.md
@@ -189,6 +189,32 @@ U.S. Cellular Field
 
 ```
 
+**转换案例**
+```
+-- 1. Oracle数据库（regexp_like）
+SQL> select * from t_regexp_like where regexp_like(f, '^10.|^121.0.29.*') ;
+
+F
+--------------------
+121.0.29.10
+10.10.10.10
+
+SQL>
+
+-- PPAS/PG数据库（POSIX正则）
+edb=# select * from t_regexp_like where f ~ '^10.|^121.0.29.*';
+      f      
+-------------
+ 121.0.29.10
+ 10.10.10.10
+(2 rows)
+
+edb=# 
+
+```
+
+
+
 
 **注意：如果模式匹配超过了以上3种所能提供的，可以使用 Perl 或 Tcl 写一个用户定义的函数，进行模式匹配。**
 
